Add AssertJ dependency and modify URL constructor using URI
Added 'org.assertj:assertj-core:3.24.2' dependency in 'build.gradle.kts' to leverage more comprehensive assertions for tests. Also, modified usages of URL constructor in 'ImageDownloader.java' with 'URI.toURL(String)' since URL constructor is being deprecated from Java 20 in anticipation of Java 21. Added extra unit tests using new AssertJ dependency in 'ChatGPTTest.java' to increase code coverage.